--- a/angular-tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
+++ b/angular-tour-of-heroes/angular-tour-of-heroes/src/app/hero-detail/hero-detail.component.html
@@ -5,6 +5,7 @@
     <div>
         <label for="hero-name">Hero name: </label>
       　<input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
+        <button (click)="save()">save</button>
     </div>
     <button (click)="goBack()">go back</button>
 </div>
